--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,11 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: Yekan;
+  src: url("../src/assets/fonts/yekan/Yekan-normal.ttf") format('truetype');
+  font-weight: normal;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+* {
+    @apply font-yekan
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
